# vs-code-files

Developer/: ABLETON_LIVE_CLONE_SPEC.md
Developer/DAW-JUCE/: .gitignore  CMakeLists.txt
Developer/DAW-JUCE/Source/: Main.cpp
Developer/DAW-JUCE/Source/App/: DAWApplication.cpp  DAWApplication.h  MainWindow.cpp  MainWindow.h
Developer/DAW-JUCE/Source/Engine/: AudioEngine.cpp  AudioEngine.h  MasterBusSource.cpp  MasterBusSource.h  TempoMap.cpp  TempoMap.h  TrackAudioSource.cpp  TrackAudioSource.h  Transport.cpp  Transport.h  TransportState.h
Developer/DAW-JUCE/Source/FileIO/: AudioImporter.cpp  AudioImporter.h  BounceExporter.cpp  BounceExporter.h  ProjectSerializer.cpp  ProjectSerializer.h
Developer/DAW-JUCE/Source/Model/: AudioFileCache.cpp  AudioFileCache.h  AudioRegion.cpp  AudioRegion.h  Project.cpp  Project.h  Track.cpp  Track.h
Developer/DAW-JUCE/Source/UI/: Colours.h  DAWLookAndFeel.cpp  DAWLookAndFeel.h  MainComponent.cpp  MainComponent.h
Developer/DAW-JUCE/Source/UI/Mixer/: ChannelStrip.cpp  ChannelStrip.h  LevelMeter.cpp  LevelMeter.h  MasterStrip.cpp  MasterStrip.h  MixerPanel.cpp  MixerPanel.h
Developer/DAW-JUCE/Source/UI/Toolbar/: TransportBar.cpp  TransportBar.h
Developer/DAW-JUCE/Source/UI/Tracks/: PlayheadOverlay.cpp  PlayheadOverlay.h  TimelineRuler.cpp  TimelineRuler.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h  TrackListPanel.cpp  TrackListPanel.h  WaveformView.cpp  WaveformView.h
Developer/DAW-JUCE/Source/Utils/: MeteringData.h  TimeFormat.cpp  TimeFormat.h
Developer/daw-pro/: index.html  package.json
Developer/daw-pro/electron/: main.js
Developer/daw-pro/src/: App.css  App.tsx  store.ts  types.ts
Developer/daw-pro/src/components/: ArrangementView.css  ArrangementView.tsx  Browser.css  Browser.tsx  DeviceChain.css  DeviceChain.tsx  MixerView.css  MixerView.tsx  PianoRoll.css  PianoRoll.tsx  SessionView.css  SessionView.tsx  Transport.css  Transport.tsx
Developer/daw-pro/src/engine/: AudioEngine.ts
vs code files/agent-team/: dev_team.py
vs code files/daw/: index.html  package-lock.json  package.json
vs code files/daw/backend/: requirements.txt  server.py
vs code files/daw/src/: App.jsx  index.css
vs code files/daw/src/audio/: AudioEngine.js  WaveformRenderer.js
vs code files/daw/src/components/: DAW.css  DAW.jsx  Mixer.css  Mixer.jsx  MixerChannel.css  MixerChannel.jsx  Timeline.css  Timeline.jsx  Toolbar.css  Toolbar.jsx  Track.css  Track.jsx  Transport.css  Transport.jsx  YouTubeModal.css  YouTubeModal.jsx
vs code files/daw/src/hooks/: useDAWState.js
vs code files/vocal-plugin/: CMakeLists.txt
vs code files/vocal-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vs code files/vocal-plugin/Source/DSP/: Doubler.cpp  Doubler.h  FormantShifter.cpp  FormantShifter.h  GateExpander.cpp  GateExpander.h  MidiPitchHandler.cpp  MidiPitchHandler.h  PitchCorrector.cpp  PitchCorrector.h  PitchDetector.cpp  PitchDetector.h  PitchShifter.cpp  PitchShifter.h  SyncedDelay.cpp  SyncedDelay.h
vs code files/vocal-plugin/Source/GUI/: LevelMeter.cpp  LevelMeter.h  PitchDisplayComponent.cpp  PitchDisplayComponent.h  PresetBrowser.cpp  PresetBrowser.h  ProVocalLookAndFeel.cpp  ProVocalLookAndFeel.h  ScaleSelector.cpp  ScaleSelector.h  TabPanel.cpp  TabPanel.h
vs code files/vocal-plugin/Source/Utils/: ParameterIDs.h  RingBuffer.h  ScaleDefinitions.h
